src/styles/NoteItem.module.css
.ImageListPage {
    /* height: 200px;
    width: 95%; */
    margin-bottom: 10%;
    /* object-fit: cover; */
    object-fit: cover;
    width: 100%;
    height: 250px;
}

.ImageDetailPage {
    /* height: 450px;
    width: 95%; */
    margin-bottom: 10%;
    object-fit: contain;
    border: #9d0913 1px solid;
    object-fit: cover;
    width: 100%;
    height: 250px;

}

.Private {
    position: fixed;
    right: 10%;
}

.Link > div {
    text-align: center;
    text-decoration: none;
    color: #9d0913;
    padding: 1%;
    margin-top: 5px;
    border: 1px solid #9d0913;
    width: 100%;
}

.Link:hover > div {
    text-decoration: none;
    background-color: #470307;
    color: #9d0913;
}

.ContainerList {
    text-align: center;
    background-color: #100000;
    margin: 5% 30%;
    color: #9d0913;
}

.ContainerDetail {
    text-align: center;
    background-color: #100000;
    color: #9d0913;
}

.Text {
    font-size: 120%;
    text-align: center;
    contain: content;
}

.TextDetail {
    font-size: 120%;
    text-align: left;
}

@media  screen and (min-width: 413px) {

    .ImageDetailPage {
        height: auto;
        width: 95%;
        margin-bottom: 10%;
        object-fit: contain;
    
    }
}

@media  screen and (max-width: 413px) {
    .Text, .TextDetail {
        font-size: 60%;
    }
}


/* .ButtonContainer {
    background-color: #100000;
    display: block;
    margin: auto;
} */

/* .Button {
    background-color: #100000;
    color: #9d0913;
    border: 1px solid #b6b6b6;;
}

.Button:hover {
    background-color: #b6b6b6;
    color: #9d0913;
    border: 1px solid #100000;
} */

